src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_multiline_string_indentation.snap
---
source: src/regression_tests/parser.rs
description: "''\n  case\n    ;;\n''\n"
---
Term
    [0;95;1m([0m IndentedString
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value =
                [0;35m[[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1mcase[0m[0;97;1m"[0m [0;36m][0m
                [0;35m,[0m
                    [0;36m[[0m TextPart [0;97;1m"[0m[0;94;1m  ;;[0m[0;97;1m"[0m [0;36m][0m
                [0;35m,[0m [0;36m[[0m[0;36m][0m
                [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
