src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_path_with_interpolation.snap
---
source: src/regression_tests/parser.rs
description: "./foo/${bar}/baz"
---
Term
    [0;95;1m([0m Path
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value =
                [0;35m[[0m TextPart [0;97;1m"[0m[0;94;1m./foo/[0m[0;97;1m"[0m
                [0;35m,[0m Interpolation Term
                    [0;36m([0m Token
                        [0;33m([0m Ann
                            [0;35;1m{[0m preTrivia = fromList [0;36;1m[[0m[0;36;1m][0m
                            [0;35;1m,[0m sourceLine = Pos [0;92;1m1[0m
                            [0;35;1m,[0m value = Identifier [0;97;1m"[0m[0;94;1mbar[0m[0;97;1m"[0m
                            [0;35;1m,[0m trailComment = Nothing
                            [0;35;1m}[0m
                        [0;33m)[0m
                    [0;36m)[0m
                [0;35m,[0m TextPart [0;97;1m"[0m[0;94;1m/baz[0m[0;97;1m"[0m
                [0;35m][0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
